feat: completar BFF con CRUD de appointments, catalog, boxes y slots