@@ -7,7 +7,10 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 
+import cl.duoc.vidasalud.bff.dto.AppointmentRequest;
 import cl.duoc.vidasalud.bff.dto.AppointmentResponse;
+import cl.duoc.vidasalud.bff.dto.AppointmentUpdateRequest;
+import cl.duoc.vidasalud.bff.dto.StatusRequest;
 
 @Component
 public class AppointmentsClient {
@@ -32,11 +35,9 @@ public class AppointmentsClient {
                 .retrieve()
                 .body(AppointmentResponse[].class);
 
-        if (response == null) {
-            return List.of();
-        }
-
-        return Arrays.asList(response);
+        return response == null
+            ? List.of()
+            : Arrays.asList(response);
     }
 
     public AppointmentResponse findById(Long id) {
@@ -45,5 +46,45 @@ public class AppointmentsClient {
             .uri("/api/appointments/{id}", id)
             .retrieve()
             .body(AppointmentResponse.class);
+    }
+
+    public AppointmentResponse create(
+            AppointmentRequest request) {
+
+        return restClient.post()
+            .uri("/api/appointments")
+            .body(request)
+            .retrieve()
+            .body(AppointmentResponse.class);
+    }
+
+    public AppointmentResponse update(
+            Long id,
+            AppointmentUpdateRequest request) {
+
+        return restClient.put()
+            .uri("/api/appointments/{id}", id)
+            .body(request)
+            .retrieve()
+            .body(AppointmentResponse.class);
+    }
+
+    public AppointmentResponse updateStatus(
+            Long id,
+            StatusRequest request) {
+
+        return restClient.put()
+            .uri("/api/appointments/{id}/status", id)
+            .body(request)
+            .retrieve()
+            .body(AppointmentResponse.class);
+    }
+
+    public void delete(Long id) {
+
+        restClient.delete()
+            .uri("/api/appointments/{id}", id)
+            .retrieve()
+            .toBodilessEntity();
     }
 }
